# Homework-Web-10

./: pyproject.toml
quotes_site/quotes_site/: settings.py
quotes_site/users/: forms.py  urls.py  views.py
quotes_site/users/templates/users/: login.html  singup.html
